Easy spaces/main/default/objects/Employee__c/Employee__c.object-meta.xml
<CustomObject>
    <description>New employees who is having probation period of 90 days</description>
    <label>Employee</label>
    <nameField>
        <label>First Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>