Easy spaces/main/default/objects/Employee__c/fields/Alternate_Email__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Email__c</fullName>
    <description>Alternate email id of the new employee</description>
    <label>Alternate Email</label>
    <type>Email</type>
</CustomField>