Easy spaces/main/default/objects/Employee__c/fields/Alternate_Phone__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Phone__c</fullName>
    <description>Alternate mobile number for contacting employees</description>
    <label>Alternate Phone</label>
    <type>Phone</type>
</CustomField>