Easy spaces/main/default/objects/Employee__c/fields/Date_of_Exit__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Exit__c</fullName>
    <label>Date of Exit</label>
    <type>Date</type>
</CustomField>