Easy spaces/main/default/objects/Employee__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <label>Designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jr. Developer</fullName>
            </value>
            <value>
                <fullName>Associate Software Engineer</fullName>
            </value>
            <value>
                <fullName>Sr. Software Engineer</fullName>
            </value>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Content Writer</fullName>
            </value>
            <value>
                <fullName>Web Designer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>