Easy spaces/main/default/objects/Employee__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email id of the new employee</description>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>