Easy spaces/main/default/objects/Employee__c/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <description>Total experience of the employee in year</description>
    <label>Experience in year</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>