Easy spaces/main/default/objects/Employee__c/fields/Highest_Education_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Highest_Education_Qualification__c</fullName>
    <description>Highest Qualification of the employee</description>
    <label>Highest Education Qualification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PG</fullName>
            </value>
            <value>
                <fullName>UG</fullName>
            </value>
            <value>
                <fullName>Diploma</fullName>
            </value>
            <value>
                <fullName>Phd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>