Easy spaces/main/default/objects/Employee__c/fields/Identity_Document__c.field-meta.xml
<CustomField>
    <fullName>Identity_Document__c</fullName>
    <description>Government Id proof of the employee</description>
    <label>Identity Document</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aadhar</fullName>
            </value>
            <value>
                <fullName>Driving License</fullName>
            </value>
            <value>
                <fullName>Voter ID</fullName>
            </value>
            <value>
                <fullName>SSN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>