Easy spaces/main/default/objects/Employee__c/fields/Identity_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Identity_Document_Number__c</fullName>
    <description>Id proof unique number of the employee</description>
    <label>Identity Document Number</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
</CustomField>