Easy spaces/main/default/objects/Employee__c/fields/Notice_Period__c.field-meta.xml
<CustomField>
    <fullName>Notice_Period__c</fullName>
    <description>Notice period for the employee before resignation</description>
    <label>Notice Period(Days)</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>