Easy spaces/main/default/objects/Employee__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Mobile number of new employee</description>
    <label>Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>