Easy spaces/main/default/objects/Employee__c/fields/Postal_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Zip_Code__c</fullName>
    <description>Pin Code of the origin/local district of the employee</description>
    <label>Postal/Zip Code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>