Easy spaces/main/default/objects/Employee__c/fields/Probation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Probation_End_Date__c</fullName>
    <description>Probation End Date of the employee</description>
    <formula>Date_of_Joining__c  + 90</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Probation End Date</label>
    <type>Date</type>
</CustomField>