Easy spaces/main/default/objects/Employee__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>origin state of the employee</description>
    <label>State</label>
    <length>16</length>
    <type>Text</type>
</CustomField>