Easy spaces/main/default/objects/Employee__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>Street address of the employee</description>
    <label>Street</label>
    <length>16</length>
    <type>Text</type>
</CustomField>