Easy spaces/main/default/objects/Employee__c/fields/Work_email__c.field-meta.xml
<CustomField>
    <fullName>Work_email__c</fullName>
    <label>Work email</label>
    <type>Email</type>
</CustomField>