Easy spaces/main/default/objects/Employee__c/fields/Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Type__c</fullName>
    <label>Work type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full time</fullName>
            </value>
            <value>
                <fullName>Part time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>